# aid-distribution-tracker-Macromedia-Advance-coding-

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  seed.py
aid_tracker/: __init__.py  app.py  database.py  models.py  serializers.py
aid_tracker/static/css/: style.css
aid_tracker/static/js/: beneficiaries.js  dashboard.js  main.js  shipments.js
aid_tracker/templates/: base.html  beneficiaries.html  dashboard.html  data.html  distributions.html  shipments.html
tests/: test_models.py
